--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/test.css">
+    <!-- <link rel="stylesheet" href="css/test.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Cinzel+Decorative:wght@400;700;900&family=Dancing+Script&family=Merriweather:ital,wght@1,300&family=Neonderthaw&family=Play&family=Romanesco&family=Share+Tech+Mono&display=swap" rel="stylesheet">
