Added animations to the moon wheel

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
     </div> -->
 
     <div class="page page1">
+        <div class="moonSVG">
+            <div class="moonWheel">
+                <div class="outerMoon"></div>
+            </div>
         <div class="moonStats">
-            <p class="moonStatus">Current Moon Phase: Waxing Crescent</p>
-        </div>
+            <p class="moonStatus"></p>
+        </div>  
         <svg class="moonPhases" width="500" height="503" viewBox="0 0 500 503" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_2_11)">
             <circle cx="250" cy="253" r="250" fill="#363636" fill-opacity="0.3"/>
@@ -203,6 +207,7 @@
             </defs>
             
             </svg>
+        </div>
         </div>
         
 
