Fixed some responsiveness issues

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Moon Phase</title>
 </head>
 
-<header class="navbar">
+    <header class="navbar">
     <div class="navbarHolder">
         <div class="moonPhaseHolder">
             <h1 class="moonPhase">Moon Phase</h1>
@@ -24,9 +24,10 @@
             <a href="" class="headerA options" style="text-decoration: none;">Options</a>
         </div>
     </div>
-</header>
+    </header>
 
 <body>
+    
     <div class="bodyydob">
     <!-- <div class="frame1">
         <div class="ellipse1">
@@ -49,7 +50,7 @@
         <div class="moonStats">
             <p class="moonStatus"></p>
         </div>  
-        <svg class="moonPhases" width="500" height="503" viewBox="0 0 500 503" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="moonPhases" viewBox="0 0 500 500" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_2_11)">
             <circle cx="250" cy="253" r="250" fill="#363636" fill-opacity="0.3"/>
             <g filter="url(#filter0_d_2_11)">
