header links to page 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="navbar">
     <div class="navbarHolder">
         <div class="moonPhaseHolder">
-            <h1 class="moonPhase">Moon Phase</h1>
+            <a href="#page1" class="moonPhase" style="text-decoration: none;">Moon Phase</a>
         </div>
         <div class="navLinks">
             <a href="#page1" class="headerA home" style="text-decoration: none;">Home</a>
