Better user friendliness with the menu

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         
 
-<body>
+<body aria-expanded="false">
 
     <nav class="navbar">
         <input type="checkbox" id="check" aria-expanded="false">
