--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body aria-expanded="false">
 
     <nav class="navbar">
-        <input type="checkbox" id="check" aria-expanded="false">
+        <input type="checkbox" id="check" name="navCheck" aria-expanded="false">
         <label for="check" class="checkBtn ">
             <img class="hamMenu" src="icons/menu-white.png" alt="menu icon">
         </label>
