Connected links in the options menu

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 </nav>
 <div class="optionMenu" aria-expanded="false">
     <ul class="optionLinks">
-        <li class="optionLi discord"><a style="text-decoration: none;" href="" class="optionBtn">Discord</a></li>
-        <li class="optionLi github"><a style="text-decoration: none;" href="" class="optionBtn">Github</a></li>
-        <li class="optionLi contact"><a style="text-decoration: none;" href="" class="optionBtn">Contact</a></li>
+        <li class="optionLi discord"><a target="_blank" style="text-decoration: none;" href="https://discord.gg/j5HrwfuW" class="optionBtn">Discord</a></li>
+        <li class="optionLi github"><a target="_blank" style="text-decoration: none;" href="https://github.com/NCooper00" class="optionBtn">Github</a></li>
+        <li class="optionLi contact"><a target="_blank" style="text-decoration: none;" href="mailto:nccooper00@gmail.com" class="optionBtn">Contact</a></li>
     </ul>
 </div> 
 
