Added a music option and play/pause feature

--- a/index.html
+++ b/index.html
@@ -144,8 +144,19 @@
         <li class="optionLi contact">
             <div class="contIcon"></div>
             <a target="_blank" style="text-decoration: none;" href="mailto:nccooper00@gmail.com" class="optionBtn">Contact</a></li>
+        <li class="optionLi contact">
+            <div aria-expanded="false" class="musicIcon"></div>
+            <a aria-expanded="false" target="_blank" style="text-decoration: none;"class="optionBtn musicBtn">Vibe</a></li>
     </ul>
 </div> 
+
+<div aria-expanded="false" class="musicBox">
+
+    <button class="previous"></button>
+    <button data-visible="false" class="playBtn"></button>
+    <button class="next"></button>
+
+</div>
 
     <div class="bodyydob">
     <!-- <div class="frame1">
