Space Chill rebranding

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Cinzel+Decorative:wght@400;700;900&family=Dancing+Script&family=Merriweather:ital,wght@1,300&family=Neonderthaw&family=Play&family=Romanesco&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     
-    <title>Moon Phase</title>
+    <title>Space Chill</title>
     
 </head>
 
@@ -126,7 +126,7 @@
         <label for="check" class="checkBtn ">
             <img class="hamMenu" src="icons/menu-white.png" alt="menu icon">
         </label>
-        <label class="moonPhase" style="text-decoration: none;">Moon Phase</label>
+        <label class="moonPhase" style="text-decoration: none;">Space Chill</label>
         <ul class="navLinks">
             <li class="mainNavLi"><a aria-expanded="false" href="#page1" class="headerA home" style="text-decoration: none;">Home</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page2" class="headerA merch" style="text-decoration: none;">Merch</a></li>
