Added indicator for moon position

--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@
         <div class="moonSVG">
 
             <div class="moonWheel">
+                
                 <div class="outerMoon"></div>
             </div>
 
             <div class="moonStats">
+                <div class="innerWheel">
+                    <div class="indicator"></div>
+                </div>
                 <p class="moonStatus"></p>
             </div>  
 
