--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <div id="page2" class="page page2">
             <h1 class="page2Head">
-                Lunar System
+                Solar System
             </h1>
             <div class="outerRing">
 
