Added randomize and order buttons to solar system widget

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <label class="moonPhase" style="text-decoration: none;">Space Chill</label>
         <ul class="navLinks">
             <li class="mainNavLi"><a aria-expanded="false" href="#page1" class="headerA home" style="text-decoration: none;">Home</a></li>
-            <li class="mainNavLi"><a aria-expanded="false" href="#page2" class="headerA merch" style="text-decoration: none;">Merch</a></li>
+            <li class="mainNavLi"><a aria-expanded="false" href="#page2" class="headerA solar" style="text-decoration: none;">Solar</a></li>
+            <li class="mainNavLi"><a aria-expanded="false" href="#page3" class="headerA merch" style="text-decoration: none;">Merch</a></li>
             <li class="mainNavLi"><a aria-expanded="false" class="headerA options" style="text-decoration: none;">Options</li>
     </ul>
 </nav>
@@ -116,20 +117,23 @@
         <div id="page2" class="page page2">
             <h1 class="page2Head">
                 Solar System
+
+                <button class="randomizeSolar"></button>
+                <button class="orderSolar"></button>
             </h1>
-            <div class="outerRing">
+            <div class="ring outerRing">
 
                 <div class="plutoRot">
                     <div class="planet Pluto"></div>
                 </div>
 
-                <div class="innerRing1">
+                <div class="ring innerRing1">
 
                     <div class="neptuneRot">
                         <div class="planet Neptune"></div>
                     </div>
 
-                    <div class="innerRing2">
+                    <div class="ring innerRing2">
 
                         <div class="uranusRot">
                             <div class="uranusRing">
@@ -137,7 +141,7 @@
                             </div>
                         </div>
 
-                        <div class="innerRing3">
+                        <div class="ring innerRing3">
 
                             <div class="saturnRot">
                                 <div class="saturnRing">
@@ -145,22 +149,22 @@
                                 </div>
                             </div>
 
-                            <div class="innerRing4">
+                            <div class="ring innerRing4">
 
                                 <div class="jupiterRot">
                                     <div class="planet Jupiter"></div>
                                 </div>
 
-                                <div class="innerRing5">
+                                <div class="ring innerRing5">
 
                                     <div class="marsRot">
                                         <div class="planet Mars"></div>
                                     </div>
 
-                                    <div class="innerRing6">
+                                    <div class="ring innerRing6">
 
                                         <div class="earthRot">
-                                            <div class="earthRing">
+                                            <div class="planet earthRing">
                                                 <div class="planet Earth"></div>
                                                 <div class="moonRot">
                                                     <div class="planet Moon"></div>
@@ -168,7 +172,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="innerRing7">
+                                        <div class="ring innerRing7">
 
                                             <div class="venusRot">
                                                 <div class="planet Venus"></div>
