--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/pageOne.css">
     <link rel="stylesheet" href="css/pageTwo.css">
     <link rel="stylesheet" href="css/pageThree.css">
+    
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="css/test.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +19,8 @@
     <title>Space Chill</title>
     
 </head>
-
+<a href="http://www.rw-designer.com/cursor-set/random-10"
+title="Get free cursors for your web."></a>
     <!-- <nav class="navbar">
         <input type="checkbox" id="check">
         <label for="check" class="checkBtn">
@@ -164,7 +166,7 @@
                                     <div class="ring innerRing6">
 
                                         <div class="earthRot">
-                                            <div class="planet earthRing">
+                                            <div class="earthRing">
                                                 <div class="planet Earth"></div>
                                                 <div class="moonRot">
                                                     <div class="planet Moon"></div>
