Added more comments on the song name section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ title="Get free cursors for your web."></a>
 
 <div aria-expanded="false" data-visible="false" class="musicBox">
     <div class="currentSong">
-        <div class="song">IT'S VERY BUGGY CURRENTLY BUT KINDA WORKS</div>
+        <div class="song">IT'S VERY BUGGY CURRENTLY BUT KINDA WORKS-VOLUME ADJUST COMING SOON</div>
     </div>
     <button class="previous"></button>
     <button data-visible="false" class="playBtn"></button>
