Music player now transitions between pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ title="Get free cursors for your web."></a>
     </ul>
 </div> 
 
-<div aria-expanded="false" data-visible="false" class="musicBox">
+<div aria-expanded="false" data-visible="false" class="musicBox musicMiddle">
     <div class="currentSong">
         <div class="song">IT'S VERY BUGGY CURRENTLY BUT KINDA WORKS-VOLUME ADJUST COMING SOON</div>
     </div>
@@ -120,8 +120,8 @@ title="Get free cursors for your web."></a>
             <h1 class="page2Head">
                 Solar System
 
-                <button class="randomizeSolar"></button>
-                <button class="orderSolar"></button>
+                <button class="randoHover1 randoHover2 randomizeSolar"></button>
+                <button class="orderHover1 orderHover2 orderSolar"></button>
             </h1>
             <div class="ring outerRing">
 
@@ -241,4 +241,5 @@ title="Get free cursors for your web."></a>
 
 <script src="script.js"></script>
 <script src="js/music.js"></script>
+<script src="js/observer.js"></script>
 </html>
