Added sound effects

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ title="Get free cursors for your web."></a>
         </ul>
     </nav> -->
 
+
     <div class="wonkeySurround">
     
         </div>
@@ -117,88 +118,91 @@ title="Get free cursors for your web."></a>
         </div>
 
         <div id="page2" class="page page2">
-            <h1 class="page2Head">
-                Solar System
+            <section class="page2Info">
+                <h1 class="page2Head">
+                    Solar System
 
-                <button class="randoHover1 randoHover2 randomizeSolar"></button>
-                <button class="orderHover1 orderHover2 orderSolar"></button>
-            </h1>
-            <div class="ring outerRing">
+                    <button class="randoHover1 randoHover2 randomizeSolar"></button>
+                    <button class="orderHover1 orderHover2 orderSolar"></button>
+                </h1>
+            </section>
+            <section class="page2System">
+                <div class="ring outerRing">
 
-                <div class="plutoRot">
-                    <div class="planet Pluto"></div>
-                </div>
-
-                <div class="ring innerRing1">
-
-                    <div class="neptuneRot">
-                        <div class="planet Neptune"></div>
+                    <div class="plutoRot">
+                        <div class="planet Pluto"></div>
                     </div>
 
-                    <div class="ring innerRing2">
+                    <div class="ring innerRing1">
 
-                        <div class="uranusRot">
-                            <div class="uranusRing">
-                                <div class="planet Uranus"></div>
-                            </div>
+                        <div class="neptuneRot">
+                            <div class="planet Neptune"></div>
                         </div>
 
-                        <div class="ring innerRing3">
+                        <div class="ring innerRing2">
 
-                            <div class="saturnRot">
-                                <div class="saturnRing">
-                                    <div class="planet Saturn"></div>
+                            <div class="uranusRot">
+                                <div class="uranusRing">
+                                    <div class="planet Uranus"></div>
                                 </div>
                             </div>
 
-                            <div class="ring innerRing4">
+                            <div class="ring innerRing3">
 
-                                <div class="jupiterRot">
-                                    <div class="planet Jupiter"></div>
+                                <div class="saturnRot">
+                                    <div class="saturnRing">
+                                        <div class="planet Saturn"></div>
+                                    </div>
                                 </div>
 
-                                <div class="ring innerRing5">
+                                <div class="ring innerRing4">
 
-                                    <div class="marsRot">
-                                        <div class="planet Mars"></div>
+                                    <div class="jupiterRot">
+                                        <div class="planet Jupiter"></div>
                                     </div>
 
-                                    <div class="ring innerRing6">
+                                    <div class="ring innerRing5">
 
-                                        <div class="earthRot">
-                                            <div class="earthRing">
-                                                <div class="planet Earth"></div>
-                                                <div class="moonRot">
-                                                    <div class="planet Moon"></div>
+                                        <div class="marsRot">
+                                            <div class="planet Mars"></div>
+                                        </div>
+
+                                        <div class="ring innerRing6">
+
+                                            <div class="earthRot">
+                                                <div class="earthRing">
+                                                    <div class="planet Earth"></div>
+                                                    <div class="moonRot">
+                                                        <div class="planet Moon"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="ring innerRing7">
+
+                                                <div class="venusRot">
+                                                    <div class="planet Venus"></div>
+                                                </div>
+
+                                                <div class="innerRing8">
+
+                                                    <div class="mercuryRot">
+                                                        <div class="planet Mercury"></div>
+                                                    </div>
+
+                                                    <div class="planet Sun"></div>
+
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <div class="ring innerRing7">
-
-                                            <div class="venusRot">
-                                                <div class="planet Venus"></div>
-                                            </div>
-
-                                            <div class="innerRing8">
-
-                                                <div class="mercuryRot">
-                                                    <div class="planet Mercury"></div>
-                                                </div>
-
-                                                <div class="planet Sun"></div>
-
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
-        
 
         <div id="page3" class="page page3">
             <h1 class="merchHeader">
@@ -241,5 +245,6 @@ title="Get free cursors for your web."></a>
 
 <script src="script.js"></script>
 <script src="js/music.js"></script>
+<script src="js/sound-effect.js"></script>
 <script src="js/observer.js"></script>
 </html>
