--- a/game/game.html
+++ b/game/game.html
@@ -34,7 +34,7 @@
     </div> -->
 
     <div class="topHud">
-        <div class="backHome" onclick="window.location.href='ncooper00.github.io/Moon-Phase-Website/'">Back Home</div>
+        <div class="backHome" onclick="window.location.href='https://ncooper00.github.io/Moon-Phase-Website'">Back Home</div>
         <div class="highScores">High Score: 0</div>
         <div class="options">Options</div>
     </div>
