css and js links now work

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ title="Get free cursors for your web."></a>
         <ul class="navLinks">
             <li class="mainNavLi"><a aria-expanded="false" href="#page1" class="headerA home" style="text-decoration: none;">Home</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page2" class="headerA solar" style="text-decoration: none;">Solar</a></li>
-            <li class="mainNavLi"><a aria-expanded="false" onclick="window.location.href='https://ncooper00.github.io/Moon-Phase-Website/game/game.html'" class="headerA playGame" style="text-decoration: none;">Play Game</a></li>
+            <li class="mainNavLi"><a aria-expanded="false" onclick="window.location.href='/game/game.html'" class="headerA playGame" style="text-decoration: none;">Play Game</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page3" class="headerA merch" style="text-decoration: none;">Merch</a></li>
             <li class="mainNavLi"><a aria-expanded="false" class="headerA options" style="text-decoration: none;">Options</li>
     </ul>
