--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ title="Get free cursors for your web."></a>
                         <div class="arrowHolder">
                             <div class="descArrow" aria-enabled="false"></div>
                         </div>
-                        <div class="imageDesc" data-visible="false"> Test escriptdadhkajsdkasdk ajdhaskjdahdjkahdkadhajkhajk jaldasjdlkasdl alkdjalkdjaslk d asdjladjalks ald askljalkd jalkajklajld kasj lkaj lka</div>
+                        <div class="imageDesc" data-visible="false">Patience</div>
                     </div>
                 </div>
                 <div class="rightArrow"></div>
