Added date and copyright credit to all of the images on the images page

--- a/index.html
+++ b/index.html
@@ -222,12 +222,15 @@ title="Get free cursors for your web."></a>
                 <div class="leftArrow"></div>
                 <div class="IODHolder">
                     <div class="imageTitle"></div>
+                    <div class="imageCounter"></div>
                     <img src="" alt="NASA image of the day." class="IOD">
                     <div class="imageDescSection">
+                        <div class="imageDate"></div>
                         <div class="arrowHolder">
                             <div class="descArrow" aria-enabled="false"></div>
                         </div>
-                        <div class="imageDesc" data-visible="false">Patience</div>
+                        <div class="imageCredit"></div>
+                        <div class="imageDesc" data-visible="false">Loading....</div>
                     </div>
                 </div>
                 <div class="rightArrow"></div>
