--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/pageOne.css">
-    <link rel="stylesheet" href="css/pageTwo.css">
-    <link rel="stylesheet" href="css/pageThree.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/Page-1-css/pageOne.css">
+    <link rel="stylesheet" href="CSS/Page-2-css/pageTwo.css">
+    <link rel="stylesheet" href="CSS/Page-3-css/pageThree.css">
     
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="css/test.css"> -->
@@ -47,13 +47,13 @@ title="Get free cursors for your web."></a>
     <nav class="navbar">
         <input type="checkbox" id="check" name="navCheck" aria-expanded="false">
         <label for="check" class="checkBtn ">
-            <img class="hamMenu" src="icons/menu-white.png" alt="menu icon">
+            <img class="hamMenu" src="ASSETS/Icons/menu-white.png" alt="menu icon">
         </label>
         <label class="moonPhase" style="text-decoration: none;">Space Chill</label>
         <ul class="navLinks">
             <li class="mainNavLi"><a aria-expanded="false" href="#page1" class="headerA home" style="text-decoration: none;">Home</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page2" class="headerA solar" style="text-decoration: none;">Solar</a></li>
-            <li class="mainNavLi"><a aria-expanded="false" onclick="window.location.href='/Moon-Phase-Website/game/moon-trainer/game.html'" class="headerA playGame" style="text-decoration: none;">Play Game</a></li>
+            <li class="mainNavLi"><a aria-expanded="false" onclick="window.location.href='/GAMES/moon-trainer/game.html'" class="headerA playGame" style="text-decoration: none;">Play Game</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page3" class="headerA images" style="text-decoration: none;">Images</a></li>
             <li class="mainNavLi"><a aria-expanded="false" class="headerA options" style="text-decoration: none;">Options</li>
     </ul>
@@ -223,7 +223,7 @@ title="Get free cursors for your web."></a>
                 <div class="IODHolder">
                     <div class="imageTitle"></div>
                     <div class="imageCounter"></div>
-                    <img src="" alt="NASA image of the day." class="IOD">
+                    <img src="ASSETS/Images/loading-image.png" alt="NASA image of the day." class="IOD">
                     <div class="imageDescSection">
                         <div class="imageDate"></div>
                         <div class="arrowHolder">
@@ -234,7 +234,6 @@ title="Get free cursors for your web."></a>
                     </div>
                 </div>
                 <div class="rightArrow"></div>
-
 
             </div>
         </div>
@@ -269,8 +268,8 @@ title="Get free cursors for your web."></a>
 </audio>
 
 <script src="script.js"></script>
-<script src="js/planets.js"></script>
-<script src="js/music.js"></script>
-<script src="js/sound-effect.js"></script>
-<script src="js/observer.js"></script>
+<script src="JS/planets.js"></script>
+<script src="JS/music.js"></script>
+<script src="JS/sound-effect.js"></script>
+<script src="JS/observer.js"></script>
 </html>
