Hopefully fixing the links to the css files for the index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="CSS/Page-1-css/pageOne.css">
-    <link rel="stylesheet" href="CSS/Page-2-css/pageTwo.css">
-    <link rel="stylesheet" href="CSS/Page-3-css/pageThree.css">
+    <link rel="stylesheet" href="/CSS/reset.css">
+    <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="stylesheet" href="/CSS/Page-1-css/pageOne.css">
+    <link rel="stylesheet" href="/CSS/Page-2-css/pageTwo.css">
+    <link rel="stylesheet" href="/CSS/Page-3-css/pageThree.css">
     
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="css/test.css"> -->
