--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="GAMES/moon-trainer/game.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&family=Cinzel+Decorative:wght@400;700;900&family=Dancing+Script&family=Merriweather:ital,wght@1,300&family=Neonderthaw&family=Play&family=Romanesco&family=Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -83,5 +83,5 @@
         </div>
     </div>
 </body>
-    <script src="game.js"></script>
+    <script src="GAMES/moon-trainer/game.js"></script>
 </html>
