--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ title="Get free cursors for your web."></a>
         <ul class="navLinks">
             <li class="mainNavLi"><a aria-expanded="false" href="#page1" class="headerA home" style="text-decoration: none;">Home</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page2" class="headerA solar" style="text-decoration: none;">Solar</a></li>
-            <li class="mainNavLi"><a aria-expanded="false" onclick="window.location.href='/Moon-Phase-Website/GAMES/moon-trainer/game.html'" class="headerA playGame" style="text-decoration: none;">Play Game</a></li>
+            <li class="mainNavLi"><a aria-expanded="false" onclick="window.location.href='/game.html'" class="headerA playGame" style="text-decoration: none;">Play Game</a></li>
             <li class="mainNavLi"><a aria-expanded="false" href="#page3" class="headerA images" style="text-decoration: none;">Images</a></li>
             <li class="mainNavLi"><a aria-expanded="false" class="headerA options" style="text-decoration: none;">Options</li>
     </ul>
